Content added. Fixing Alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,35 +1,58 @@
+* { padding: 0; margin: 0; border: 0; box-sizing: border-box; }
+
 header {
   background-color: #8B0000;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
-  vertical-align: middle;
-  height: 10%
+  width: 100%;
+  height: 6%;
+  border-bottom: 0px;
 }
+
 nav {
-  background-color: #303030;
-  height: 2%;
+  background-color: #404040;
+  height: 4%;
+  width: 100%;
   color: white;
   font-family: sans-serif, Times, serif;
   font-size: 1em;
   text-align: right;
-  padding: 1%;
-  word-spacing: 30px
+  word-spacing: 30px;
+  vertical-align: middle;
+  text-align: right;
+  clear: both;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em}
+  font-size: 1em;
+  clear: both;
+}
 article {
-  float: left;
-  padding: 20px;
   width: 70%;
   background-color: white;
-  height: 60%;
+  height: 80%;
+  float: left;
+  padding: 20px;
+  height: 60%
 }
 aside {
   float: right;
-  padding: 20px;
   width: 30%;
   background-color: white;
-  height: 60%;
-
+  height: 80%;
+  text-align: left;
 }
+
+footer {
+  clear: both;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: #404040;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 10%;
+}
+
+p { width: 100%}
